[package]
name = "space_packets"
version = "0.2.0"
authors = ["adssam <adrissonsamersla@gmail.com>"]
edition = "2018"

[dependencies]
log        = "0.4"  # Logging crate
env_logger = "0.8"  # Logging adapter crate

tokio        = { version = "1.8", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util"] } # Asynchronous model crate

anyhow     = "1.0"  # Error types with context
byteorder  = "1"    # Parsing bytes into values
